syntax = "proto3";
package sedachain.staking.v1;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "sedachain/pubkey/v1/pubkey.proto";

option go_package = "github.com/sedaprotocol/seda-chain/x/staking/types";

// Msg defines the staking Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateSEDAValidator defines a method for creating a new validator.
  rpc CreateSEDAValidator(MsgCreateSEDAValidator)
      returns (MsgCreateSEDAValidatorResponse);
}

// MsgCreateSEDAValidator defines a message for creating a new SEDA
// validator.
message MsgCreateSEDAValidator {
  option (cosmos.msg.v1.signer) = "validator_address";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  cosmos.staking.v1beta1.Description description = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  cosmos.staking.v1beta1.CommissionRates commission = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  string min_self_delegation = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // Deprecated: Use of Delegator Address in MsgCreateValidator is deprecated.
  // The validator address bytes and delegator address bytes refer to the same
  // account while creating validator (defer only in bech32 notation).
  string delegator_address = 4
      [ (cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true ];
  string validator_address = 5
      [ (cosmos_proto.scalar) = "cosmos.ValidatorAddressString" ];
  google.protobuf.Any pubkey = 6
      [ (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey" ];
  cosmos.base.v1beta1.Coin value = 7
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  repeated sedachain.pubkey.v1.IndexedPubKey indexed_pub_keys = 8
      [ (gogoproto.nullable) = false ];
}

// MsgCreateSEDAValidatorResponse defines the Msg/MsgCreateSEDAValidator
// response type.
message MsgCreateSEDAValidatorResponse {}
